--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.24.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "express-fileupload": "^1.2.1",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.3",
+    "nodemailer": "^6.4.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
